doc/tmp.output
Terminals unused in grammar

   QUIT


Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input line

    3 line: NEWLINE
    4     | exp NEWLINE

    5 exp: NUMBER
    6    | exp PLUS exp
    7    | exp MINUS exp
    8    | exp TIMES exp
    9    | exp DIVIDE exp
   10    | MINUS exp
   11    | exp POW exp
   12    | LPAREN exp RPAREN


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMBER (258) 5
PLUS (259) 6
MINUS (260) 7 10
TIMES (261) 8
DIVIDE (262) 9
POW (263) 11
LPAREN (264) 12
RPAREN (265) 12
NEWLINE (266) 3 4
QUIT (267)
NEG (268)


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
input (15)
    on left: 1 2, on right: 0 2
line (16)
    on left: 3 4, on right: 2
exp (17)
    on left: 5 6 7 8 9 10 11 12, on right: 4 6 7 8 9 10 11 12


State 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . line

    $end     shift, and go to state 2
    NUMBER   shift, and go to state 3
    MINUS    shift, and go to state 4
    LPAREN   shift, and go to state 5
    NEWLINE  shift, and go to state 6

    line  go to state 7
    exp   go to state 8


State 2

    0 $accept: input $end .

    $default  accept


State 3

    5 exp: NUMBER .

    $default  reduce using rule 5 (exp)


State 4

   10 exp: MINUS . exp

    NUMBER  shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5

    exp  go to state 9


State 5

   12 exp: LPAREN . exp RPAREN

    NUMBER  shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5

    exp  go to state 10


State 6

    3 line: NEWLINE .

    $default  reduce using rule 3 (line)


State 7

    2 input: input line .

    $default  reduce using rule 2 (input)


State 8

    4 line: exp . NEWLINE
    6 exp: exp . PLUS exp
    7    | exp . MINUS exp
    8    | exp . TIMES exp
    9    | exp . DIVIDE exp
   11    | exp . POW exp

    PLUS     shift, and go to state 11
    MINUS    shift, and go to state 12
    TIMES    shift, and go to state 13
    DIVIDE   shift, and go to state 14
    POW      shift, and go to state 15
    NEWLINE  shift, and go to state 16


State 9

    6 exp: exp . PLUS exp
    7    | exp . MINUS exp
    8    | exp . TIMES exp
    9    | exp . DIVIDE exp
   10    | MINUS exp .
   11    | exp . POW exp

    POW  shift, and go to state 15

    $default  reduce using rule 10 (exp)


State 10

    6 exp: exp . PLUS exp
    7    | exp . MINUS exp
    8    | exp . TIMES exp
    9    | exp . DIVIDE exp
   11    | exp . POW exp
   12    | LPAREN exp . RPAREN

    PLUS    shift, and go to state 11
    MINUS   shift, and go to state 12
    TIMES   shift, and go to state 13
    DIVIDE  shift, and go to state 14
    POW     shift, and go to state 15
    RPAREN  shift, and go to state 17


State 11

    6 exp: exp PLUS . exp

    NUMBER  shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5

    exp  go to state 18


State 12

    7 exp: exp MINUS . exp

    NUMBER  shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5

    exp  go to state 19


State 13

    8 exp: exp TIMES . exp

    NUMBER  shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5

    exp  go to state 20


State 14

    9 exp: exp DIVIDE . exp

    NUMBER  shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5

    exp  go to state 21


State 15

   11 exp: exp POW . exp

    NUMBER  shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5

    exp  go to state 22


State 16

    4 line: exp NEWLINE .

    $default  reduce using rule 4 (line)


State 17

   12 exp: LPAREN exp RPAREN .

    $default  reduce using rule 12 (exp)


State 18

    6 exp: exp . PLUS exp
    6    | exp PLUS exp .
    7    | exp . MINUS exp
    8    | exp . TIMES exp
    9    | exp . DIVIDE exp
   11    | exp . POW exp

    TIMES   shift, and go to state 13
    DIVIDE  shift, and go to state 14
    POW     shift, and go to state 15

    $default  reduce using rule 6 (exp)


State 19

    6 exp: exp . PLUS exp
    7    | exp . MINUS exp
    7    | exp MINUS exp .
    8    | exp . TIMES exp
    9    | exp . DIVIDE exp
   11    | exp . POW exp

    TIMES   shift, and go to state 13
    DIVIDE  shift, and go to state 14
    POW     shift, and go to state 15

    $default  reduce using rule 7 (exp)


State 20

    6 exp: exp . PLUS exp
    7    | exp . MINUS exp
    8    | exp . TIMES exp
    8    | exp TIMES exp .
    9    | exp . DIVIDE exp
   11    | exp . POW exp

    POW  shift, and go to state 15

    $default  reduce using rule 8 (exp)


State 21

    6 exp: exp . PLUS exp
    7    | exp . MINUS exp
    8    | exp . TIMES exp
    9    | exp . DIVIDE exp
    9    | exp DIVIDE exp .
   11    | exp . POW exp

    POW  shift, and go to state 15

    $default  reduce using rule 9 (exp)


State 22

    6 exp: exp . PLUS exp
    7    | exp . MINUS exp
    8    | exp . TIMES exp
    9    | exp . DIVIDE exp
   11    | exp . POW exp
   11    | exp POW exp .

    POW  shift, and go to state 15

    $default  reduce using rule 11 (exp)
